app/scss/blocks/hamburger-menu.scss
.hamburger-menu {
	position: absolute;
	left: -99999px;
	right: 0;
	background: rgba(47, 50, 52, 0.95);
	align-items: center;
	justify-content: center;
	display: none;
	transition: opacity .3s;

	&.is-active {
		display: flex;
		position: fixed;
		opacity: 1;
		left: 0;
		right: 0;
		bottom: 0;
		top: 0;
		z-index: 20;
	}
}

